Fix font size on Safari on Yosemite

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -180,6 +180,7 @@ h1, h2, h3, h4, h5, h6 {
 	color: #3f4b56;
 	line-height:1.2em;
 	margin-bottom:.8em;
+	font-family: 'Helvetica Neue';
 }
 h1.red, h2.red, h3.red, h4.red, h5.red, h6.red{color: #e87352;}
 
